Added ractive examples

--- a/bower.json
+++ b/bower.json
@@ -27,5 +27,11 @@
     "assets/vendor",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "backbone": "~1.1.2",
+    "jquery": "~2.1.1",
+    "requirejs": "~2.1.15",
+    "bootstrap": "~3.3.1"
+  }
 }
